Fixed some layout issues.
- Modified the Equivalences view.

--- a/dietaso/src/styles/App.scss
+++ b/dietaso/src/styles/App.scss
@@ -1,76 +1,76 @@
 @import 'variables.scss';
 
 :root {
-  // Colores de la aplicación.
-  --primary: #439776;
-  --secondary: #328ab2;
-  --auxiliar: #c1cf3a;
-  --optional1: #4bb5c3;
-  --optional2: #8ab832;
-  --white: #ffffff;
+    // Colores de la aplicación.
+    --primary: #439776;
+    --secondary: #328ab2;
+    --auxiliar: #c1cf3a;
+    --optional1: #4bb5c3;
+    --optional2: #8ab832;
+    --white: #ffffff;
 
-  // Color de los grupos de alimentos.
-  --colorFrutas: #ff7a00;
-  --colorVerduras: #00a24f;
-  --colorCarne: #e01400;
-  --colorLeguminosas: #ff2088;
-  --colorCereales: #cd8d00;
-  --colorLacteos: #00a2fb;
+    // Color de los grupos de alimentos.
+    --colorFrutas: #ff7a00;
+    --colorVerduras: #00a24f;
+    --colorCarne: #e01400;
+    --colorLeguminosas: #ff2088;
+    --colorCereales: #cd8d00;
+    --colorLacteos: #00a2fb;
 
-  scrollbar-color: #c4c4c4 transparent !important;
-  scrollbar-width: thin !important;
+    scrollbar-color: #c4c4c4 transparent !important;
+    scrollbar-width: thin !important;
 }
 
 .ant-menu
-  .ant-menu-root
-  .ant-menu-vertical
-  .ant-menu-dark
-  .ant-menu-inline-collapsed {
-  overflow: hidden;
+    .ant-menu-root
+    .ant-menu-vertical
+    .ant-menu-dark
+    .ant-menu-inline-collapsed {
+    overflow: hidden;
 }
 
 .ant-menu-inline,
 .ant-menu-vertical,
 .ant-menu-vertical-left {
-  border-right: none !important;
+    border-right: none !important;
 }
 .ant-menu:not(.ant-menu-horizontal) .ant-menu-item-selected {
-  background-color: transparent !important;
+    background-color: transparent !important;
 }
 
 html,
 body {
-  padding: 0;
-  margin: 0;
-
+    padding: 0;
+    margin: 0;
+    /* 
   ::-webkit-scrollbar {
     display: none;
-  }
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  } */
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+        Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 .ant-typography {
-  color: #595959 !important;
+    color: #595959 !important;
 }
 
 .ant-typography {
-  color: #595959 !important;
+    color: #595959 !important;
 }
 
 .ant-tabs-tab-btn {
-  color: #fff;
+    color: #fff;
 }
 
 .ant-form-item-label > label {
-  color: #ffffff !important;
+    color: #ffffff !important;
 }
 
 .ant-form-item-label {
-  margin-left: 0.5rem;
-  text-align: start !important;
+    margin-left: 0.5rem;
+    text-align: start !important;
 }
